--- a/style.css
+++ b/style.css
@@ -41,5 +41,9 @@ body{
 }
 
 .block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: black solid;
+    font-size: 2rem;
 }
