--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     justify-content: center;
     background-color:rgb(194, 189, 189);
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 .main{
@@ -25,7 +26,7 @@ body{
 }
 
 .table-div{
-    background-color:rgb(100, 139, 207);
+    background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,8 +34,9 @@ body{
 
 /* might delete later */
 .table{
-    display: inline-grid;
-    grid-template-columns: repeat(3,auto);
+    display: grid;
+    grid-template-columns: repeat(3,33.3%);
+    grid-template-rows: repeat(3,33.3%);
     background-color: rgb(255, 255, 255);
     height: 420px;
     width: 60%;
@@ -44,6 +46,22 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: black solid;
+    border: 1px solid black;
     font-size: 2rem;
+}
+.modal{
+    display: none;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 0px;
+}
+
+.results{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 5rem;
+    background-color:rgb(194, 189, 189);
 }
