--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color:rgb(194, 189, 189);
+    background-color:rgb(255, 255, 255);
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
@@ -11,11 +11,13 @@ body{
 a{
     outline: none;
     text-decoration: none;
-    color: white;
+    color: rgb(65, 61, 61);
+    font-size: 3.5vw;
+    font-weight: 600;
 }
 
 .main{
-    background-color:rgb(107, 123, 148);
+    background-color:rgb(255, 255, 255);
     width: 50%;
     display: flex;
     justify-content: center;
@@ -23,24 +25,23 @@ a{
 }
 
 .title{
-    background-color:rgb(40, 64, 104);
+    background-color:rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 22px;
-    font-weight: 600;
-    height: 45px;
+    color: black;
+    height: 5vw;
 }
 
 .table-div{
-    background-color: rgb(0, 0, 0);
+    background-color:rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .clearDiv{
+    background-color:rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,5 +92,11 @@ button:hover{
     flex-direction: column;
     width: 100%;
     height: 5rem;
-    background-color:rgb(194, 189, 189);
+    background-color:rgb(255, 255, 255);
+}
+
+.resultDisplay{
+    height: 3vw;
+    display: flex;
+    align-items: center;
 }
