--- a/style.css
+++ b/style.css
@@ -99,4 +99,7 @@ button:hover{
     height: 3vw;
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 20%;
+    border-radius: 1rem;
 }
