--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a{
     outline: none;
     text-decoration: none;
     color: rgb(65, 61, 61);
-    font-size: 3.5vw;
+    font-size: 3rem;
     font-weight: 600;
 }
 
@@ -30,7 +30,7 @@ a{
     justify-content: center;
     align-items: center;
     color: black;
-    height: 5vw;
+    height: 4rem;
 }
 
 .table-div{
@@ -96,10 +96,10 @@ button:hover{
 }
 
 .resultDisplay{
-    height: 3vw;
+    height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20%;
+    width: 25%;
     border-radius: 1rem;
 }
