--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a{
     outline: none;
     text-decoration: none;
     color: rgb(65, 61, 61);
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
     font-weight: 600;
 }
 
@@ -30,6 +30,7 @@ a{
     justify-content: center;
     align-items: center;
     color: black;
+    font-size: 35px;
     height: 25%;
 }
 
